tests/cases/standard-library/ok/prelude/prelude-macros.ari
fn main() -> i64 {
  assert!(true);
  debug_assert!(1 < 2);
  assert_eq!(3, 3);
  assert_ne!(3, 4);
  assert_eq!(true, true);
  assert_ne!(true, false);

  if false {
    panic!();
  }
  if false {
    todo!();
  }
  if false {
    unreachable!();
  }

  print!("macro={}", 5);
  println!(" ok={}", true);
  std::print!(" std={}", 6);
  return 7;
}
