tests/cases/standard-library/errors/prelude-macro-assert-eq-type.ari
fn main() -> i64 {
  assert_eq!(1, true);
  return 0;
}
